--- a/templates/base.html
+++ b/templates/base.html
@@ -3,36 +3,55 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TOPTOP</title>
+    <title>SEBDATTOP</title>
     <link rel="icon" href="{% static 'images/s.ico' %}" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Fuente de Google Fonts -->
+
     <style>
-            /* Estilos CSS para el menú */
-            .menu {
-              background-color: #002240; /* Azul oscuro */
-              padding: 10px;
-              text-align: center;
-            }
-            .menu ul {
-              list-style-type: none;
-              margin: 0;
-              padding: 0;
-              display: flex;
-              justify-content: center;
-            }
-            .menu ul li {
-              margin-right: 10px;
-            }
-            .menu ul li a {
-              color: #fff; /* Texto en blanco */
-              text-decoration: none;
-              padding: 5px 10px;
-              border-radius: 5px;
-              background-color: #004c80; /* Azul claro */
-              transition: background-color 0.3s ease;
-            }
-            .menu ul li a:hover {
-              background-color: #002d4c; /* Azul más oscuro al pasar el cursor */
-            }
+      /* Estilos CSS para el menú */
+      body {
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        font-family: "Roboto", sans-serif; /* Fuente de Google Fonts */
+        margin: 0;
+      }
+
+      .menu {
+        background-color: rgba(
+          0,
+          34,
+          64,
+          0.9
+        ); /* Azul oscuro con transparencia */
+        padding: 10px;
+        text-align: center;
+      }
+      .menu ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+      }
+      .menu ul li {
+        margin-right: 10px;
+      }
+      .menu ul li a {
+        color: #fff; /* Texto en blanco */
+        text-decoration: none;
+        padding: 5px 10px;
+        border-radius: 5px;
+        background-color: #004c80; /* Azul claro */
+        transition: background-color 0.3s ease;
+      }
+      .menu ul li a:hover {
+        background-color: #002d4c; /* Azul más oscuro al pasar el cursor */
+      }
 
       .content {
         width: 900px;
@@ -41,23 +60,37 @@
         justify-content: center;
         align-items: center;
         text-align: center;
-        margin: 0 auto; /
-            }
+        margin: 0 auto;
+      }
 
-            .content > * {
-              margin-bottom: 20px; /* Espacio entre elementos */
-            }
-            .footer {
-              position: fixed;
-              left: 0;
-              bottom: 0;
-              width: 100%;
-              background-color: #002240; /* Azul oscuro */
-              padding: 10px;
-              text-align: center;
-              font-size: 12px;
-              color: #fff; /* Texto en blanco */
-            }
+      .content > * {
+        margin-bottom: 20px; /* Espacio entre elementos */
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Sombra suave */
+        background-color: rgba(
+          255,
+          255,
+          255,
+          0.9
+        ); /* Fondo blanco con transparencia */
+        padding: 20px;
+      }
+
+      .footer {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
+        background-color: rgba(
+          0,
+          34,
+          64,
+          0.9
+        ); /* Azul oscuro con transparencia */
+        padding: 10px;
+        text-align: center;
+        font-size: 12px;
+        color: #fff; /* Texto en blanco */
+      }
     </style>
     {% block estilos %}{% endblock %}
   </head>
@@ -71,6 +104,10 @@
     </div>
 
     <div class="content">{% block contenido %}{% endblock %}</div>
+
+    <div class="footer">
+      <!-- Contenido del pie de página -->
+    </div>
 
     {% block scripts %}{% endblock %}
   </body>
