--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -1,17 +1,29 @@
 {% extends 'base.html' %} {% block estilos %}
 <style>
   .container {
-    max-width: 900px; /* Ancho máximo del contenedor */
-    margin: 0 auto; /* Centrar horizontalmente */
+    max-width: 900px;
+    margin: 0 auto;
     display: flex;
+    justify-content: flex-start; /* Alinear el contenido al inicio del contenedor (izquierda) */
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    background-image: linear-gradient(135deg, #f2f2f2, #ffffff);
+    padding: 20px;
   }
 
   .sidebar {
     width: 250px;
     background-color: #f2f2f2;
     padding: 5px;
+    margin-right: 20px; /* Espacio entre el menú lateral y el contenido principal */
   }
 
+  .sidebar h2 {
+    font-size: 22px;
+    color: #002240; /* Color de texto (azul oscuro) */
+    padding: 10px;
+    border-bottom: 2px solid #002240; /* Borde inferior de color azul oscuro */
+    margin-bottom: 10px;
+  }
   .sidebar ul {
     list-style-type: none;
     margin: 0;
@@ -29,14 +41,17 @@
     display: block;
     padding: 5px;
     text-align: left;
-    background-color: #ddd;
+    background-color: #f2f2f2;
+    border: 1px solid #ccc;
+    color: #333;
     border-radius: 5px;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease, color 0.3s ease, transform 0.2s ease;
   }
 
   .sidebar ul li a:hover {
-    background-color: #001f3f;
+    background-color: #004c80;
     color: #fff;
+    transform: scale(1.05);
   }
 
   .content {
@@ -49,44 +64,39 @@
 
   h1 {
     font-size: 26px;
-    color: #333333;
+    color: #002240; /* Color de texto (azul oscuro) */
     text-align: center;
-    background: linear-gradient(45deg, #002240, #004c80);
-    padding: 10px;
+    padding: 15px;
+    border: 2px solid #002240; /* Borde de color azul oscuro */
     border-radius: 15px;
-    color: #fff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    background: none; /* Eliminamos el fondo difuminado */
   }
 
   p {
     font-size: 15px;
-    line-height: 1.5;
+    line-height: 1.6;
     text-align: justify;
   }
 </style>
-
 {% endblock %} {% block contenido %}
-
 <div class="container">
   <div class="sidebar">
     <h2>Aplicaciones</h2>
     <ul>
-      <li><a href="/loadfile">Poligonal Cerrada brazo interno</a></li>
+      <li><a href="/loadfile">Poligonal Cerrada Brazo interno</a></li>
       <li>
-        <a href="/loadfile_poldoble">Poligonal Cerrada Doble punto de apoyo</a>
+        <a href="/loadfile_poldoble">Poligonal Abierta Doble punto de apoyo</a>
       </li>
       <li>
-        <a href="/loadfile_poldoble_ex">Poligonal Cerrada brazo externo</a>
+        <a href="/loadfile_poldoble_ex">Poligonal Cerrada Brazo externo</a>
       </li>
       <li><a href="/calcular_ondulacion">Mapa Ondulación GeoCol2004</a></li>
-      <li><a href="#">Nivelación Geometrica</a></li>
-      <li><a href="#">Calcular Azimut</a></li>
-      <li><a href="#">Calcular Distancia entre puntos</a></li>
+      <li><a href="/calcular_azimut_post">Calcular Azimut y Distancia</a></li>
     </ul>
   </div>
   <div class="content">
-    <!-- Contenido principal de la página -->
-    <h1>TOPTOP</h1>
+    <h1>SEBDATTOP</h1>
     <p
       style="
         font-size: 15px;
@@ -111,6 +121,7 @@
       de coordenadas, la determinación de distancias y ángulos, la nivelación de
       terrenos, entre muchas otras.
     </p>
+
     <p>
       Una de las características destacadas de nuestra página es la posibilidad
       de cargar datos en diferentes formatos, como archivos de texto, CSV, Esto
