se agrega videos

--- a/templates/loadfile.html
+++ b/templates/loadfile.html
@@ -29,6 +29,17 @@
   >PLANTILLAS DE EJEMPLO</a
 >
 
+<h2>VIDEO EJEMPLO</h2>
+<div class="video-container">
+  <iframe
+    width="560"
+    height="315"
+    src="https://www.youtube.com/embed/ID_DEL_VIDEO"
+    frameborder="0"
+    allowfullscreen
+  ></iframe>
+</div>
+
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
   <label for="pol_file">Archivo Poligonal:</label>
