--- a/templates/loadfile_poldoble.html
+++ b/templates/loadfile_poldoble.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block contenido %}
-<h1>PLIGONAL ABIERTA CON DOBLE PUNTO DE APOYO</h1>
+<h1>POLIGONAL ABIERTA CON DOBLE PUNTO DE APOYO</h1>
 
 <div class="instructions">
   <h2>Instrucciones:</h2>
