--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -96,7 +96,7 @@
     </ul>
   </div>
   <div class="content">
-    <h1>SEBDATTOP</h1>
+    <h1>SGT</h1>
     <p
       style="
         font-size: 15px;
