--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>SEBDATTOP</title>
+    <title>SGT</title>
     <link rel="icon" href="{% static 'images/s.ico' %}" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
