actualizacion de mapa

--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -91,7 +91,11 @@
       <li>
         <a href="/loadfile_poldoble_ex">Poligonal Cerrada Brazo externo</a>
       </li>
-      <li><a href="/calcular_ondulacion">Mapa Ondulación GeoCol2004</a></li>
+      <li>
+        <a href="/calcular_ondulacion_y_velocidades"
+          >Mapa Ondulación | VEMOS2017</a
+        >
+      </li>
       <li><a href="/calcular_azimut_post">Calcular Azimut y Distancia</a></li>
     </ul>
   </div>
@@ -148,4 +152,5 @@
     <p>Creado por el Ing. Sebastian Martinez</p>
   </div>
 </div>
+
 {% endblock %}
