--- a/templates/mapa.html
+++ b/templates/mapa.html
@@ -1,4 +1,3 @@
-{% extends 'base.html' %} {% block estilos %}
 <style>
   /* Estilos adicionales específicos para la página de inicio */
   h1 {
@@ -9,7 +8,7 @@
 
   #map-container {
     width: 100%;
-    height: 750px;
+    height: 100vh;
     position: relative;
   }
 
@@ -27,13 +26,29 @@
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-    z-index: 1000;
+    z-index: 1;
   }
 
   #coordinates {
     margin-bottom: 10px;
     font-size: 16px;
     color: #555;
+  }
+
+  .full-screen-map {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    z-index: 100; /* Asegura que el mapa esté en capas superiores */
+  }
+
+  #map-container {
+    z-index: 0;
   }
 
   #resultado {
@@ -45,6 +60,10 @@
 
   #myForm {
     margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
   }
 
   #myForm h3 {
@@ -61,11 +80,28 @@
   }
 
   #myForm input[type="number"] {
-    width: 60px;
+    width: 80px;
     margin-right: 5px;
     padding: 5px;
     font-size: 14px;
     color: #333;
+    text-align: center;
+  }
+
+  #myForm button {
+    margin-top: 10px;
+    padding: 8px 16px;
+    font-size: 14px;
+    font-weight: bold;
+    color: #fff;
+    background-color: #337ab7;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+  #myForm button:hover {
+    background-color: #286090;
   }
 
   #irBtn,
@@ -79,22 +115,56 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    text-align: center;
   }
 
   #irBtn:hover,
   #borrarBtn:hover {
     background-color: #286090;
   }
-</style>
-{% endblock %} {% block contenido %}
-<h1>Ondulación Geoidal Geocol2004</h1>
+  #additional-form {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+    z-index: 1;
+  }
 
-<div id="map-container">
+  /* Estilos para el cuadro de información adicional */
+  #additional-info {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+    z-index: 1;
+  }
+
+  /* Estilos para los párrafos en el cuadro de información adicional */
+  #additional-info h4 {
+    font-size: 18px;
+    color: #555;
+    margin-bottom: 5px;
+  }
+
+  #additional-info p {
+    font-size: 14px;
+    color: #333;
+    margin: 5px 0;
+  }
+</style>
+
+<div id="map-container" class="full-screen-map">
   <div id="map"></div>
   <div id="map-info">
     <div id="coordinates"></div>
     <div id="resultado"></div>
-    <div id="myForm">
+    <div id="myForm" class="centered-form">
       <h3>Ingrese coordenadas</h3>
       <form>
         {% csrf_token %}
@@ -161,6 +231,12 @@
       </form>
     </div>
   </div>
+  <div id="additional-info">
+    <h4>Información Adicional</h4>
+    <p>Creado por: Ing Sebastian Martinez</p>
+    <p>Modelo de Velocidades VEMOS2017</p>
+    <p>GeoCol2004 solo para Colombia</p>
+  </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/leaflet@1.7.1/dist/leaflet.js"></script>
@@ -175,7 +251,7 @@
   var marker;
 
   function initMap() {
-    var map = L.map("map").setView([4.5709, -74.2973], 10);
+    var map = L.map("map").setView([4.5709, -74.2973], 6);
 
     var markerLayer = L.layerGroup().addTo(map);
 
@@ -201,7 +277,7 @@
       var lng_decimal = lng_grados + lng_minutos / 60 + lng_segundos / 3600;
 
       $.ajax({
-        url: "/calcular_ondulacion/",
+        url: "/calcular_ondulacion_y_velocidades/",
         method: "POST",
         headers: { "X-CSRFToken": csrftoken },
         data: {
@@ -212,11 +288,28 @@
         },
         success: function (response) {
           // Mostrar la ondulación geoidal
-          mostrarOndulacion(response.ondulacion);
+          mostrarOndulacionYVelocidades(
+            response.ondulacion,
+            response.vel_x,
+            response.vel_y,
+            response.vel_z
+          );
+
+          // Mostrar las velocidades (agregar los logs aquí)
+          console.log(
+            "Velocidades:",
+            response.vel_x,
+            response.vel_y,
+            response.vel_z
+          );
 
           // Hacer zoom y mostrar el punto en el mapa
-          map.flyTo([lat, lng], 15); // Zoom al punto con un nivel de zoom de 15
-          L.marker([lat, lng]).addTo(markerLayer); // Agregar un marcador en la capa de marcadores
+          map.flyTo([lat, lng], 15);
+          if (marker) {
+            marker.setLatLng([lat, lng]);
+          } else {
+            marker = L.marker([lat, lng]).addTo(markerLayer);
+          }
         },
         error: function (xhr, status, error) {
           console.log(error);
@@ -259,10 +352,22 @@
       markerLayer.clearLayers();
     }
 
-    function mostrarOndulacion(ondulacion) {
+    function mostrarOndulacionYVelocidades(ondulacion, vel_x, vel_y, vel_z) {
       var ondulacionFormateada = parseFloat(ondulacion).toFixed(3);
+      var velocidadesHTML =
+        "Velocidad X: " +
+        vel_x +
+        "<br>" +
+        "Velocidad Y: " +
+        vel_y +
+        "<br>" +
+        "Velocidad Z: " +
+        vel_z;
       document.getElementById("resultado").innerHTML =
-        "Ondulación Geoidal: " + ondulacionFormateada;
+        "Ondulación Geocol2004: " +
+        ondulacionFormateada +
+        "<br>" +
+        velocidadesHTML;
     }
 
     document.getElementById("irBtn").addEventListener("click", irALocalizacion);
@@ -283,4 +388,3 @@
 
   initMap();
 </script>
-{% endblock %}
